# deez

./: Cargo.toml
src/: cli.rs  commands.rs  configs.rs  main.rs  utils.rs
src/commands/: create_app.rs
src/commands/create_app/: apps.rs  integrations.rs
src/commands/create_app/apps/: create_astro_app.rs  create_next_app.rs  create_react_app.rs
src/commands/create_app/integrations/: add_git.rs  add_tailwind.rs
src/configs/: create_app_config.rs
src/utils/: get_extension_from_filename.rs
