[package]
name = "deez"
edition = "2021"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Emirhan Pala <emrhnpla02@proton.me>"]
repository = "https://github.com/emrhnpla02/deez"

[dependencies]
kayra = { git = "https://github.com/emrhnpla02/kayra" }
tokio = { version = "^1.22", features = ["macros", "rt", "rt-multi-thread"] }
futures-lite = "^1.12"
anyhow = "^1.0"
clap = { version = "^4.0", features = ["derive"] }
clap-verbosity-flag = "^2.0"
confy = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
strum = "0.24"
toml = "^0.5"
edit = "^0.1"
